# plant_swap

./: README.md  db.sqlite3  pyproject.toml
accounts/: forms.py  tests.py  urls.py  validators.py  views.py
accounts/migrations/: 0001_initial.py  0002_message_date_sent.py  0003_alter_message_date_sent.py  0005_alter_message_body.py
accounts/templates/accounts/: like_list.html  login.html  message.html  messages.html  profile.html  registration.html  trade.html  write_message.html
accounts/templatetags/: error.py
plant_collection/: admin.py  forms.py  helper_functions.py  models.py  tests.py  urls.py  validators.py  views.py
plant_collection/management/commands/: depopulate_plants.py  populate_plants.py
plant_collection/migrations/: 0001_initial.py
plant_collection/templates/: 404.html  500.html  base.html  front_page.html
plant_collection/templates/plant_collection/: add_plant.html  collection.html  mobile_specie_search.html  plant.html  (+4 more)
plant_collection/templatetags/: prepopulate_field.py
plant_swap/: README.md  asgi.py  db.py  db.sqlite3  manage.py  pyproject.toml  settings.py  urls.py  wsgi.py
plant_swap/accounts/: forms.py  models.py  tests.py  urls.py  validators.py  views.py
plant_swap/plant_collection/: admin.py  apps.py  forms.py  models.py  tests.py  urls.py  validators.py  views.py
plant_swap/plant_swap/: settings.py  urls.py
plant_swap/rest/: serializers.py  urls.py  views.py
plant_swap/static/: staticfiles.json
static/: plants.csv  species.csv
trade/: apps.py  models.py  urls.py  views.py
trade/migrations/: 0001_initial.py
(+171 files in other folders)
