[tool.poetry]
name = "plant-swap"
version = "0.1.0"
description = "Web app for trading plants"
authors = ["Adam Kubik <kubik.adam445@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.7"
Django = "^4.2.6"
dj-database-url = "^2.1.0"
whitenoise = {extras = ["brotli"], version = "^6.6.0"}
selenium = "^4.14.0"
Pillow = "^9.5.0"
psycopg2-binary = "^2.9.9"
gunicorn = "^21.2.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
